--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
@@ -27,9 +26,6 @@ time, mark, audio, video {
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
-}
-body {
-	line-height: 1;
 }
 ol, ul {
 	list-style: none;
@@ -49,6 +45,7 @@ table {
 
 /* template create react app css styling */
 body {
+  line-height: 1;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -70,11 +67,8 @@ code {
 
 html {
   font-size: 62.5%;
-}
-
-.App {
-  height: 100%;
-  font-size: 1.6rem;
+  width: 100vw;
+  height: 100vh;
 }
 
 a {
